--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "aws-appsync": "^3.0.2",
+    "aws-appsync-react": "^3.0.2",
+    "graphql-tag": "^2.10.1",
+    "lodash.flowright": "^3.5.0",
     "react": "^16.12.0",
+    "react-apollo": "^2.0.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
   },
